# ordered-varint

./: .gitignore  CHANGELOG.md  Cargo.toml  README.md
.rustme/: docs.md  header.md
coverage/: coverage.json  index.html
coverage/examples/: demo-signed.rs.html  demo.rs.html  index.html
coverage/src/: index.html  lib.rs.html  signed.rs.html  unsigned.rs.html
examples/: demo-signed.rs  demo.rs
main/: crates.js  help.html  search-index.js  settings.html  source-files.js
main/implementors/core/clone/: trait.Clone.js
main/implementors/core/cmp/: trait.Eq.js  trait.Ord.js  trait.PartialEq.js  trait.PartialOrd.js
main/implementors/core/convert/: trait.From.js  trait.TryFrom.js
main/implementors/core/fmt/: trait.Debug.js
main/implementors/core/hash/: trait.Hash.js
main/implementors/core/marker/: trait.Copy.js  trait.Freeze.js  trait.Send.js  trait.StructuralEq.js  trait.StructuralPartialEq.js  trait.Sync.js  trait.Unpin.js
main/implementors/core/panic/unwind_safe/: trait.RefUnwindSafe.js  trait.UnwindSafe.js
main/implementors/ordered_varint/: trait.Variable.js
main/ordered_varint/: all.html  index.html  sidebar-items.js  struct.Signed.html  struct.Unsigned.html  trait.Variable.html
main/ordered_varint/signed/: struct.Signed.html
main/ordered_varint/unsigned/: struct.Unsigned.html
main/src/ordered_varint/: lib.rs.html  signed.rs.html  unsigned.rs.html
src/: lib.rs  signed.rs  unsigned.rs
xtask/: Cargo.toml
xtask/src/: main.rs
