[package]
name = "ordered-varint"
version = "1.0.1"
edition = "2021"
description = "Byte-orderable, variable length encoding."
repository = "https://github.com/khonsulabs/ordered-varint"
license = "MIT OR Apache-2.0"
keywords = ["encoding", "variable-length"]
categories = ["encoding", "compression"]
readme = "./README.md"

[dependencies]

[dev-dependencies]
rand = "0.8"

[workspace]
members = ["xtask"]
